--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ theme                   = "hugo-future-imperfect-slim"
 preserveTaxonomyNames   = true
 paginate                = 3
 disqusShortname         = ""
-googleAnalytics         = ""
+googleAnalytics         = "UA-159562243-1"
 pluralizeListTitles     = false
 disableLanguages        = [""]
 
