--- a/config.toml
+++ b/config.toml
@@ -73,7 +73,7 @@ disableLanguages        = [""]
       alt                 = "Lorand Fazakas profile picture"
 
   [params.sidebar]
-    about               = "test"
+    about               = ""
     # Sets the number of recent posts to show in the sidebar. The default value is 5.
     postAmount          = 5
     # set to show or to hide categories in the sidebar
