--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title                   = "Lorand's Blog"
 theme                   = "hugo-future-imperfect-slim"
 preserveTaxonomyNames   = true
 paginate                = 3
-disqusShortname         = ""
+disqusShortname         = "lorand-dev"
 googleAnalytics         = "UA-159562243-1"
 pluralizeListTitles     = false
 disableLanguages        = [""]
